--- a/index.css
+++ b/index.css
@@ -61,7 +61,7 @@ button:hover {
 }
 
 img.avatar {
-  width: 40%;
+  width: 20%;
   border-radius: 50%;
 }
 
@@ -138,4 +138,11 @@ span.psw {
   .cancelbtn {
      width: 100%;
   }
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 20%;
+  width: 20%;
 }
